--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ allprojects {
     ext.buildTimestamp = new Date().format('yyyy-MM-dd HH:mm:ss')
 
     group = 'com.jayway.jsonpath'
-    version = '2.3.0' + (snapshotVersion ? "-SNAPSHOT" : "")
+    version = '2.3.0-batfish-internal'
 
     if (JavaVersion.current().isJava8Compatible()) {
         tasks.withType(Javadoc) {
